--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -1,16 +1,14 @@
-name: "Webhook event exercise"
-
+name: "webhook event exercise"
 on:
   repository_dispatch:
     types:
       - custom_webhook
-
 jobs:
   respond-to-dispatch:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      
       - name: Run a script
-        run: echo "Event of type: $GITHUB_EVENT_NAME"
+        run: |
+          echo "Event of type: $GITHUB_EVENT_NAME"
