--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -1,8 +1,9 @@
-name: "webhook event exercise"
+name: "Webhook event exercise"
 on:
   repository_dispatch:
     types:
-      - custom_webhook
+      - webhook
+
 jobs:
   respond-to-dispatch:
     runs-on: ubuntu-latest
