--- a/.github/workflows/workflow-command.yml
+++ b/.github/workflows/workflow-command.yml
@@ -17,8 +17,10 @@ jobs:
           echo "::endgroup"
 
       - name: Step 2
-        run: echo "MY_VALUE=hello" >> $Github_ENV
+        run: | 
+          echo "MY_VALUE=hello" >> $GITHUB_ENV
 
       - name: "Step 3"  
-        run: echo $MY_VALUE
+        run: | 
+          echo $MY_VALUE
 
